# XCommentAssistant

./: .gitignore  README.md  app.py  config.py  create_new_pinecone_index.py  pyproject.toml  reply_post.py  save_post_reply.py  save_replies.py  test_app.py  training_data.jsonl
app/: __init__.py  cohere_client.py  jobs.py  langchain_setup.py  pinecone_client.py  routes.py  slack_client.py  storage.py  topic_classification.py  x_client.py
instance/: data.json
jobs/: generate_replies.py  save_post_reply.py
playground/: dspy_program.py  llm_scaper.py  run_storm_wiki_gpt_with_VectorRM.py
scripts/: create_new_pinecone_index.py  generate_finetuning_data.py  save_post.py  save_post_reply.py  save_replies.py  save_reply.py  test_query.py  test_x_list.py  training_data.jsonl
semantic_search/: create_new_pinecone_index.py  save_post.py  test_query.py  upsert_pinecone.py
src/: cohere_client.py  common.py  database.py  datastore.py  openai_client.py  replies_pipeline.py  slack_client.py  training_datasets.py  x_client.py
x/: x.py
