[tool.poetry]
name = "xcommentassistant"
version = "0.1.0"
description = ""
authors = ["Markus Odenthal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"
cohere = "^5.5.8"
langchain = "^0.2.6"
langchainhub = "^0.1.20"
langchain-anthropic = "^0.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
