[tool.poetry]
name = "xcommentassistant"
version = "0.1.0"
description = ""
authors = ["Markus Odenthal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"
cohere = "^5.5.8"
langchain = "^0.2.6"
langchainhub = "^0.1.20"
langchain-anthropic = "^0.1.17"
tweepy = "^4.14.0"
pinecone = "^4.0.0"
langchain-openai = "^0.1.19"
slack-sdk = "^3.31.0"
openai = "^1.40.2"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
knowledge-storm = "^0.2.3"
modal = "^0.64.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
